Edited card colors

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <!-- info boxes -->
     <section class="p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center text-light">
                 <div class="col-md">
                     <div class="card">
                         <img src="img/pixels-sketch.png" class="card-img-top" alt="...">
-                        <div class="card-body">
+                        <div class="card-body bg-dark">
                           <h5 class="card-title">Pixel-Sketch</h5>
                           <p class="card-text">Objective of this project is to provide a website in which anybody can make pixel art and animate it, it is a work in progress in which I am practicing skills as I learn them.</p>
                           <a href="#" class="btn btn-primary">Visit</a>
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md"><div class="card" >
                     <img src="img/prs.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body bg-secondary">
                       <h5 class="card-title">Paper Rock Scissors</h5>
                       <p class="card-text">Simple website in which user plays paper rock scissors against computer. Used in order to practice javascript and DOM manipulation.
                         </p>
@@ -98,7 +98,7 @@
             </div>
                 <div class="col-md"><div class="card">
                     <img src="img/sf.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body bg-dark">
                       <h5 class="card-title">Sign Up Form</h5>
                       <p class="card-text">Objective of this project is to provide a website in which anybody can make pixel art and animate it, it is a work in progress in which I am practicing skills as I learn them.</p>
                       <a href="#" class="btn btn-primary">Visit</a>
