View button link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <!-- info boxes -->
     <section class="p-5">
         <div class="container">
+            <h1 class="mb-4">Projects</h1>
             <div class="row text-center text-light">
                 <div class="col-md">
                     <div class="card">
@@ -82,7 +83,7 @@
                         <div class="card-body bg-dark">
                           <h5 class="card-title">Pixel-Sketch</h5>
                           <p class="card-text">Objective of this project is to provide a website in which anybody can make pixel art and animate it, it is a work in progress in which I am practicing skills as I learn them.</p>
-                          <a href="#" class="btn btn-primary">Visit</a>
+                          <a href="https://635bf7fe307d4402da68ff56--meek-liger-9d1a4e.netlify.app/" class="btn btn-primary">Visit</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +93,7 @@
                       <h5 class="card-title">Paper Rock Scissors</h5>
                       <p class="card-text">Simple website in which user plays paper rock scissors against computer. Used in order to practice javascript and DOM manipulation.
                         </p>
-                      <a href="#" class="btn btn-primary">Visit</a>
+                      <a href="https://david-gaspar-h.github.io/paper-rock-scissors/" class="btn btn-primary">Visit</a>
                     </div>
                 </div>
             </div>
